r32:
+ Minor documentation bugfix.

r31:
+ Updated rigid bodies destructors. The older versions of destructor can have some problems

r30:
- Removed bug when using Patch Soft Body without assign it a mesh

IrrBP 0.21 (r29):
+ Fixed an important bug that can swallow bullet determinism when FPS changes

IrrBP 0.2 (r28):
+ Implemented convex hull bodies
- SVN Docs wont be update by now. You must download the SDK to view the updated doxygen documentation

r27:
+ Re-wrote the CollisionCallbackAnimator with CollisionResultCallback to customize the callback
+ Re-wrote the TimeCallbackAnimator with EndTimeCallback to customize the callback
+ Preparing for irrBP 0.2 release

r26:
+ Adjusted setPosition() function. It's now possible to move KINEMATIC objects trough the levels like an irrlicht node.

r25:
+ Added new animator, called TimeCallBackAnimator that helps to call a function after a defined time

r22:
+ Removed an unused variable, updated irrBPLib VS project

r21:
+ Added new animator, called CollisionCallbackAnimator that helps to retrieve the collision-point of an object by calling a user function

r20:
+ New function clear() to remove all bodies and constraints from the world

r19:
+ Added ERP-ERP2-CFM modifier functions
+ Added Time-Step modifier function

IrrBP 0.11 (r18):
+ Updated Documentation to solve linking problems with bullet > 2.76

r17:
+ Removed an un-necessary library from Hello World example

r16:
+ Added CCD support

IrrBP 0.1 (r15):
+ Updated VC Projects

r14:
+ Completely changed the object hierarchy to easily implements other futures objects.
+ Bullet Manager Updated
+ Soft Bodies optimization
+ IrrBP Bullet World optimization
+ Code tweaks to avoid strange memory leaks

r13:
+ Completed mesh support for Patch/Ropes. You can new use getMesh() [Only for patch] or setDraw(true) [Only for Rope] to draw the objects

r12: